--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf ./build && tsc",
+    "start:dev": "ts-node ./src/index.js",
+    "start": "npm run build && node build/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^6.12.0",
+    "ajv": "^6.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^13.11.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3",
     "typescript-json-schema": "^0.42.0"
   }
 }
